--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,16 @@
-body {
-  margin: 0;
-  padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
+html,
+body {
+    overflow: hidden;
+}
+
+.webgl {
+    outline: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
